# stm32_proto

./: .gitignore  CMakeLists.txt  STM32F427IGTx_FLASH.ld  build.sh
Drivers/CMSIS/: CMakeLists.txt
Inc/: stm32f4xx_it.h
Src/: main.cpp  stm32f4xx_it.c  target-def.cmake
Src/cmake/: gcc-arm-none-eabi.cmake
proto/: CMakeLists.txt  user.proto
